tests/neg/i12430.scala
class i0 {
  new collection // error
  new io // error
}